--- a/feature/menu/mixStory/styleMS.css
+++ b/feature/menu/mixStory/styleMS.css
@@ -45,8 +45,77 @@ button{
         padding-top: 10px;
         background-color: #323240;
         border-radius: 10px;
-        max-width: var(--max-width-ctn);
+        max-width: var(--max-width-ctn); 
         padding: 10px;
         margin:0 auto;
         margin-top: 20px;
     }
+        /* .ctn-describe{
+            border: 1px solid red;
+        } */
+            .ctn-describe div{
+                margin-top: 10px;
+                display: inline-block
+            }
+                .ctn-describe div:nth-child(2){
+                    margin-left: 10px;
+                }
+            .ctn-describe span{
+                font-size: 21px;
+            }
+            .ctn-describe select{
+                padding: 10px 7px;
+                border-radius: 8px;
+                border: 1px solid #ccc;
+                background: #fff;
+                font-size: 16px;
+                cursor: pointer;
+                transition: 0.2s;
+            }
+            .ctn-describe select:focus {
+                border-color: #6c63ff;
+                box-shadow: 0 0 4px rgba(108, 99, 255, 0.5);
+            }
+            
+        .create-btn{
+            min-width: 70px;
+            align-self: center;
+            font-size: 21px;
+            background-color:rgb(37, 37, 247);
+            color: var(--font-text-color);
+            font-weight: 60;
+            border: 1px solid black;
+            border-radius: 10px;
+            cursor: pointer;
+            margin-top: 20px;
+            padding: 10px;
+        }
+    .ctn-storys{
+        text-align: center;
+        margin-top: 10px;
+        /* border: 1px solid red; */
+    }
+        .ctn-storys div{
+            margin: 10px 20px;
+            max-width: 600px;
+            min-width: 250px;
+            width: auto;
+            /* border: 1px solid red; */
+            border-radius: 10px;
+            /* text-align:start; */
+            background-color: #554ed37e;
+            /* padding: 0px 0px 10px 0x; */
+        }
+        .ctn-storys button{
+            width: 100%;
+            padding: 10px 18px;
+            font-size: 23px;
+            border-radius: 18px;
+            background-color: #4940f6;
+            opacity: 1;
+            color: rgb(192, 222, 255);
+        }
+        .ctn-storys span{
+            text-align: start;
+            font-size: 18px;
+        }
