--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@ button{
 }
 .navbar{
     display: flex;
-    /* position: fixed; */
-    /* top:0px; */
     justify-content: space-between;
     align-items: center;
     min-height: 50px;
@@ -32,7 +30,7 @@ button{
             border-radius: 50px;
             
         }
-        .web-name{
+        .web-name{ 
             margin-left: 5px;
             color: #ffb742;
             font-weight: 600;
@@ -44,6 +42,9 @@ button{
     }
     .navbar ul li {
         list-style: none;
+    }
+    .navbar li{
+        margin-right:10px;
     }
     .navbar ul li a{
         color: var(--text-color);
@@ -61,8 +62,17 @@ button{
     font-size: 20px;
     max-width: 800px;
     margin: 0 auto;
+    position: relative;
 }
-
+    .setting-icon{
+        height: 50px;
+        width: 50px;
+        position: absolute;
+        right: 7px;
+        top: 10px;
+        cursor: pointer;
+        display: none;
+    }
 .createTagFolder{
     background-color: #7f5af0;
     border-radius: 20px;
