--- a/feature/menu/flashcard/stylefd.css
+++ b/feature/menu/flashcard/stylefd.css
@@ -23,38 +23,36 @@ button {
 
 .container {
     max-width: 900px;
-    margin: 20px auto;
+    margin: 0px auto;
     padding: 15px;
 }
 
 .header {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     position: relative;
     font-weight: 600;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #555;
+    font-size: 22px;
 }
 
-.header div {
-    position: absolute;
-    right: 10px;
-    display: flex;
-    gap: 10px;
-    align-items: center;
+.goBack-page{
+    cursor: pointer;
+    opacity: 0.85;
+    transition: 0.2s;
+    height: 50px;
+    border-radius: 10px;
 }
 
-.goBack-page, .setting {
+.goBack-page:hover{
+    opacity: 1;
+    transform: scale(1.05);
+    border:2px solid white;
+
+}
+
+.goBack-page{
     border-radius: 12px;
-    padding: 5px;
-    background-color: var(--background-color);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.goBack-page:hover, .setting:hover {
-    transform: scale(1.1);
-    box-shadow: 0 0 8px rgba(0,0,0,0.3);
 }
 
 .container-body {
@@ -251,3 +249,24 @@ button {
     width: 180px;
 }
 
+
+@media (max-width: 600px){
+    .title{
+            font-size: 20px;
+        }
+
+    .setting, .goBack-page{
+        height: 45px;
+        width: 45px;
+    }
+}
+@media (max-width: 460px){
+    .title{
+        font-size: 18;
+    }
+    .setting, .goBack-page{
+        height: 40px;
+        width: 40px;
+    }
+
+}
