--- a/feature/menu/WaL/styleWaL.css
+++ b/feature/menu/WaL/styleWaL.css
@@ -62,6 +62,11 @@ body{
     border-radius: var(--radius);
     padding: 20px;
     box-shadow: 0 0 15px rgba(0,0,0,0.25);
+    
+    min-height: 70vh; 
+    height: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 /* ---------- TERM HEADER ---------- */
@@ -88,6 +93,9 @@ body{
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    position: relative;
+    /* flex: 1; */
+    
 }
 
 .btn-hide-ans{
@@ -111,10 +119,22 @@ body{
     height: 40px;
     cursor: pointer;
     transition: 0.2s;
-}
+} 
 
 .item-speaker:hover{
     transform: scale(1.1);
+}
+
+.select-voices{
+    position: absolute;
+    right: 5px;
+    font-family: cursive;
+    cursor: pointer;
+    margin-left: 5px;
+    padding:5px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 10px;
 }
 
 /* ---------- ANSWER INPUT ---------- */
@@ -136,6 +156,7 @@ body{
     padding: 10px;
     resize: none;
     transition: 0.2s;
+    /* flex: 1; */
 }
 
 .inputAns:focus{
@@ -156,7 +177,7 @@ body{
 }
 
 .dpl-ans{
-    font-size: 14px;
+    font-size: 17px;
     cursor: pointer;
     color: #9CA3AF;
     transition: 0.2s;
@@ -167,15 +188,24 @@ body{
     color: #00C2FF;
 }
 
+.dpl-ans:active {
+    transform: scale(0.96);
+    opacity: .85;
+}
+
 .submit{
     background: linear-gradient(135deg, var(--accent), var(--accent2));
     color: white;
     border: none;
     border-radius: 50px;
-    height: 35px;
+    height: 45px;
     padding: 0 20px;
     cursor: pointer;
     transition: 0.2s;
+    display: block;
+    /* margin: 10px auto 0 auto; */
+    width: 90%;
+    margin: auto auto 0 auto;
 }
 
 .submit:hover{
@@ -265,6 +295,42 @@ body{
     display: none;
 }
 
+/* ---------- FINiSH---------- */
+.ctn-bbar{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 15px;
+    margin-top: 15px;
+}
+
+.finish-btn{
+    padding: 10px 20px;
+    border: none;
+    border-radius: 40px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.finish-btn:hover{
+    transform: scale(1.05);
+}
+
+.btn-ctn{
+    background: var(--accent);
+    color: white;
+}
+
+.btn-DA{
+    background: #40d791;
+    color: black;
+}
+
+.greenTick{
+    /* margin: 0 auto; */
+    width: 250px;
+    height: 250px;
+}
 
 @media (max-width: 600px){
     .title{
@@ -276,7 +342,7 @@ body{
         width: 45px;
     }
 }
-@media (max-width: 460px){
+@media (max-width: 400px){
     .title{
         font-size: 18;
     }
@@ -284,5 +350,23 @@ body{
         height: 40px;
         width: 40px;
     }
-
+    .container{
+        margin: 0; 
+        padding: 0;
+    }
+    .container-body{
+        min-height: 80vh;
+    }
 }
+    .dpl-ans {
+        font-size: 18px;
+    }
+    .inputAns{
+        min-height: 200px;
+        padding: 10px;
+        margin:0 auto;
+    }
+    .ctn-inputAns{
+        margin-top: 50px;
+    }
+
