--- a/style.css
+++ b/style.css
@@ -79,24 +79,14 @@ body{
     display: flex;
     margin-top: 20px;
 }
-@media (max-width: 700px) {
-    .body-child{
-        display: block;
-    }
-    .block-list-vocab{
-        display: none;
-    }
-    body{
-        padding: 10px;
-    }
-}
+
 
 /* ----------MAIN---------- */
 .main{
     /* min-width: 1200px; */
     flex: 1;
     max-width: 1000px;
-    margin-left:10px;
+    /* margin-left:10px; */
 }
 
 /* ---------- TOP BUTTON BAR ---------- */
@@ -118,6 +108,7 @@ body{
     padding: 20px;
     width: 90%;
     min-height: 245px;
+    min-height: 60vh;
 }
 
 .createTagFolder{
@@ -199,6 +190,26 @@ body{
     transform: scale(0.95);
 }
 
+/* ---------- clear localStorage button ---------- */
+.btn-clearLocal{
+    padding: 5px;
+    background: linear-gradient(150deg, #acd656, #a85522);
+    border-radius: 12px;
+    transition: all 0.5s ease;
+}
+.btn-clearLocal:hover{
+    scale: 1.15;
+}
+.text-notice-dbl-click-clearLocal{
+    background-color: white;
+    padding: 5px; 
+    color: black;
+    border-radius: 5px;
+    opacity: 0;
+    transition: all ease 2s;
+}
+
+
 /* ---------- available vocab list ---------- */
 .block-list-vocab {
     max-width: 300px;
@@ -256,4 +267,26 @@ body{
         max-width: 170px;
     }
 }
+@media (max-width: 700px) {
+    .body-child{
+        display: block;
+    }
+    .block-list-vocab{
+        display: none;
+    }
+    body{
+        padding: 10px;
+    }
+}
 
+@media (max-width: 400px){
+    .navbar{
+        padding: 0
+    }
+    .main{
+        margin: 0;
+        padding: 0;
+    } 
+   
+
+}
