--- a/feature/menu/styleMn.css
+++ b/feature/menu/styleMn.css
@@ -67,18 +67,20 @@ body{
     margin-top: 10px;
     text-align: center;
     box-shadow: 0 0 15px rgba(0,0,0,0.25);
+    min-height: 70vh;
 }
 
 /* -------------------- PRACTICE BUTTON -------------------- */
 .practice-btn{
     width: 70%;
+    min-width: 250px;
     height: 65px;
     margin: 18px auto;
     font-size: 18px;
     color: white;
     border: none;
     border-radius: var(--radius);
-    background: linear-gradient(135deg, var(--accent), var(--accent2));
+    background: linear-gradient(135deg, #5b43ff, #8b5cf6);
     cursor: pointer;
     transition: 0.2s;
 }
@@ -102,8 +104,19 @@ body{
     font-size: 26px;
     font-weight: 700;
     margin-bottom: 15px;
+    position: relative;
 }
-
+.select-voices{
+    position: absolute;
+    right: 5px;
+    font-family: cursive;
+    cursor: pointer;
+    margin-left: 5px;
+    padding:5px;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 10px;
+}
 .speaker-icon{
     width: 32px;
     height: 32px;
@@ -129,7 +142,7 @@ body{
     font-size: 17px;
     border: none;
     border-radius: 10px;
-    background: linear-gradient(135deg, var(--accent), var(--accent2));
+    background: linear-gradient(135deg, #5b43ff, #8b5cf6);
     color: white;
     cursor: pointer;
     transition: 0.2s;
@@ -138,6 +151,15 @@ body{
 .alts:hover{
     transform: translateY(-2px);
     box-shadow: 0 0 18px var(--accent2);
+}
+
+.true-alt{
+    border : 5px solid yellow;
+}
+.false-alt{
+    background:  #323240;
+    color:  #323240;
+    border: 0;
 }
 
 /* -------------------- NEXT QUESTION BUTTON -------------------- */
